fix: unified CQ view, add: sparql query field to CQ
